--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -13,8 +13,12 @@ jobs:
               with:
                     username: ${{ secrets.DOCKERHUB_USER}}
                     password: ${{ secrets.DOCKERHUB_TOKEN}}
+
             - name: Checkout
               uses: actions/checkout@v4
+              with:
+                path: main
+
             - name: Test
               run: docker-compose run --rm app sh -c "python manage.py test"
             - name: Lint
