--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -4,7 +4,7 @@ name: Checks
 on: [push]
 
 env:
-    ACTIONS_ALLOW_USE_UNSECURE_NODE_VERSION=true
+    ACTIONS_ALLOW_USE_UNSECURE_NODE_VERSION:true
 jobs:
     test-lint:
         name: Test and Lint
