--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -19,7 +19,7 @@ jobs:
                 path: main
 
             - name: Test
-              run: docker-compose run --rm app sh -c "python manage.py test"
+              run: docker compose run --rm app sh -c "python manage.py test"
             - name: Lint
-              run: docker-compose run --rm app sh -c "flake8"
+              run: docker compose run --rm app sh -c "flake8"
               
