--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,23 @@ services:
     volumes:
       - ./app:/app
     command: >
-     sh -c "python manage.py makemigrations &&  
-     python manage.py migrate && 
-     python manage.py runserver 0.0.0.0:8000"
+      sh -c "python manage.py runserver 0.0.0.0:8000"
+    environment:
+      - db_host=db
+      - db_name=devdb
+      - db_user=devuser
+      - db_password=changeme
+    depends_on:
+      - db
+
+  db:
+    image: postgres:13-alpine
+    environment:
+      - POSTGRES_USER=devuser
+      - POSTGRES_PASSWORD=changeme
+      - POSTGRES_DB=devdb
+    volumes:
+      - dev-db-data:/var/lib/postgresql/data
+
+volumes:
+  dev-db-data:
